[tool.poetry]
name = "python-windows-utils"
version = "0.0.1"
description = "Set of python scripts to simplify your life while using Windows 10"
authors = ["Marek Prochazka <m.prochazka2002@gmail.com>"]
license = "MIT"
repository = "https://github.com/marekprochazka/python-windows-utils"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: CLI Tools",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Rust"
]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^37.0.2"
rust_toolkit = {file = "rust_toolkit/rust_lib/rust_toolkit-0.1.0-cp39-none-win_amd64.whl"}


[tool.poetry.dev-dependencies]
maturin = "^0.12.17"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"